--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,44 @@
 .App-link {
   color: #61dafb;
 }
-
+.form-control {
+  display: block;
+  width: 60% !important;
+  margin-top: 20px !important;
+  font-style: oblique;
+  border-radius: 25px;
+}
+.heading_style {
+  color: black;
+  font-size: 25px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-optical-sizing: ;
+}
+.button_style {
+  margin-top: 20px !important;
+  background: rgb(5, 5, 92);
+  color: white;
+  width: 60% !important;
+  border-radius: 25px;
+}
+.container {
+  display: flex;
+  min-height: 40vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(20, 20, 43);
+  padding: 10px;
+  background: white;
+  margin-top: 300px;
+}
+.help-block {
+  color: red;
+}
+.col-sm-2 col-form-label {
+  color: black;
+  text-align: center;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
